prod/gitops-express2-eborrar/express-sample-app2/manifests.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitops-express2-eborrar
    app.kubernetes.io/instance: gitops-express2-eborrar
    app.kubernetes.io/name: gitops-express2-eborrar-express-sample-app2
  name: app-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: gitops-express2-eborrar
    app.kubernetes.io/instance: gitops-express2-eborrar
    app.kubernetes.io/name: gitops-express2-eborrar-express-sample-app2
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitops-express2-eborrar
    app.kubernetes.io/instance: gitops-express2-eborrar
    app.kubernetes.io/name: gitops-express2-eborrar-express-sample-app2
    app.openshift.io/runtime: js
  name: example-express-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gitops-express2-eborrar
      app.kubernetes.io/instance: gitops-express2-eborrar
      app.kubernetes.io/name: gitops-express2-eborrar-express-sample-app2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gitops-express2-eborrar
        app.kubernetes.io/instance: gitops-express2-eborrar
        app.kubernetes.io/name: gitops-express2-eborrar-express-sample-app2
    spec:
      containers:
      - env:
        - name: INGRESS_HOST
        - name: PROTOCOLS
        - name: LOG_LEVEL
          value: debug
        image: quay.io/yurci0/express-sample-app2:d52071a2a17266f212171035c5fcde1d50685383
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: express-sample-app
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    openshift.io/host.generated: "true"
  labels:
    app: gitops-express2-eborrar
    app.kubernetes.io/instance: gitops-express2-eborrar
    app.kubernetes.io/name: gitops-express2-eborrar-express-sample-app2
  name: app-route
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: app-service
    weight: 100
  wildcardPolicy: None
